added github actions

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -16,3 +16,5 @@ jobs:
           server-type: "cax11"
           ssh-key-name: "kn@DESKTOP-JSOLO15"
           hcloud-token: ${{ secrets.HCLOUD_TOKEN }}
+          floating-ip-id: ${{ secrets.FLOATING_IP }}
+          floating-ip-assignment-timeout: 30000
