--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: TimDaub/hetzner-cloud-deploy-server-action@v2
         with:
           server-name: "docker-ce-ubuntu-4gb-hel1-4"
-          server-image: "docker-ce"
+          server-image: "ubuntu-20.04"
           server-type: "cax11"
           ssh-key-name: "kn@DESKTOP-JSOLO15"
           hcloud-token: ${{ secrets.HCLOUD_TOKEN }}
