added github actions

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -15,6 +15,5 @@ jobs:
           server-image: "docker-ce"
           server-type: "cax11"
           ssh-key-name: "kn@DESKTOP-JSOLO15"
-          hcloud-token: ${{ secrets.HCLOUD_TOKEN }}213
+          hcloud-token: ${{ secrets.HCLOUD_TOKEN }}
           floating-ip-id: ${{ secrets.FLOATING_IP }}
-          floating-ip-assignment-timeout: 30000
