--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -16,7 +16,7 @@ jobs:
           server-type: cax11
           ssh-key-name: kn@DESKTOP-JSOLO15
           hcloud-token: ${{ secrets.HCLOUD_TOKEN }}
-          floating-ip-id: ${{ secrets.FLOATING_IP_ID }}
+          floating-ip-id: 41710250
           floating-ip-assignment-timeout: 30000
 #
 #jobs:
