--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: Ubuntu-20.04
+    runs-on: docker-ce
     steps:
       - uses: TimDaub/hetzner-cloud-deploy-server-action@v2
         with:
