--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -15,7 +15,7 @@ jobs:
           server-image: docker-ce2
           server-type: cax112
           ssh-key-name: default2
-          hcloud-token: ${{ secrets.HCLOUD_TOKEN }}2
+          hcloud-token: ${{ secrets.HCLOUD_TOKEN }}
           floating-ip-id: 417102502
           floating-ip-assignment-timeout: 300002
 #
