--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -11,10 +11,10 @@ jobs:
     steps:
       - uses: TimDaub/hetzner-cloud-deploy-server-action@v2
         with:
-          server-name: docker-ce1
-          server-image: docker-ce2
-          server-type: cax112
-          ssh-key-name: default2
+          server-name: "docker-ce"
+          server-image: "docker-ce"
+          server-type: "cax11"
+          ssh-key-name: "default"
           hcloud-token: ${{ secrets.HCLOUD_TOKEN }}
 #          floating-ip-id: 41710250
 #          floating-ip-assignment-timeout: 300002
