--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -15,9 +15,9 @@ jobs:
           server-image: "docker-ce"
           server-type: "CAX11"
           ssh-key-name: "default"
-          hcloud-token: ${{ secrets.HCLOUD_TOKEN }}
-#          floating-ip-id: 41712547
-#          floating-ip-assignment-timeout: 300002
+          hcloud-token: "HnpUy2b6WqdQJfftl3uQFRj1Uxtgk16hmCqOEsnEvFMs8yvNPXVa6vDg4xAGzmR4"
+          floating-ip-id: "41712547"
+          floating-ip-assignment-timeout: "300002"
 #
 #jobs:
 #  build:
