--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -11,33 +11,10 @@ jobs:
     steps:
       - uses: TimDaub/hetzner-cloud-deploy-server-action@v2
         with:
-          server-name: "docker-ce"
-          server-image: "docker-ce"
-          server-type: "CAX11"
-          ssh-key-name: "default"
-          hcloud-token: "HnpUy2b6WqdQJfftl3uQFRj1Uxtgk16hmCqOEsnEvFMs8yvNPXVa6vDg4xAGzmR4"
-          floating-ip-id: "41712547"
-          floating-ip-assignment-timeout: "300002"
-#
-#jobs:
-#  build:
-#    runs-on: Ubuntu-20.04
-#    steps:
-#      - uses: TimDaub/hetzner-cloud-deploy-server-action@v2
-#        with:
-#          server-name: "docker-ce-ubuntu-4gb-hel1-4"
-#          server-image: "docker-ce"
-#          server-type: "cax11"
-#          ssh-key-name: "kn@DESKTOP-JSOLO15"
-#          hcloud-token: ${{ secrets.HCLOUD_TOKEN }}
-#          startup-timeout: 40000
-#          floating-ip-id: floating-ip-id
-#          floating-ip-assignment-timeout: 30000
-#      - uses: webfactory/ssh-agent@v0.4.1
-#        with:
-#          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-#      - run: mkdir -p ~/.ssh/ && ssh-keyscan -H $SERVER_IPV4 >> ~/.ssh/known_hosts
-#      - run: ssh root@$SERVER_IPV4 "ip addr add $SERVER_FLOATING_IPV4 dev eth0"
-#      - run: mkdir -p ~/.ssh/ && ssh-keyscan -H $SERVER_FLOATING_IPV4 >> ~/.ssh/known_hosts
-#      - run: ssh root@$SERVER_FLOATING_IPV4 touch tim_was_here
-#      - run: ssh root@$SERVER_FLOATING_IPV4 ls
+          server-name: docker-ce
+          server-image: docker-ce
+          server-type: CAX11
+          ssh-key-name: default
+          hcloud-token: HnpUy2b6WqdQJfftl3uQFRj1Uxtgk16hmCqOEsnEvFMs8yvNPXVa6vDg4xAGzmR4
+          floating-ip-id: 41712547
+          floating-ip-assignment-timeout: 300002
