--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -12,9 +12,9 @@ jobs:
       - uses: TimDaub/hetzner-cloud-deploy-server-action@v2
         with:
           server-name: docker-ce
-          server-image: docker-ce
-          server-type: CAX11
-          ssh-key-name: default
+#          server-image: docker-ce
+#          server-type: CAX11
+#          ssh-key-name: default
           hcloud-token: HnpUy2b6WqdQJfftl3uQFRj1Uxtgk16hmCqOEsnEvFMs8yvNPXVa6vDg4xAGzmR4
 #          floating-ip-id: 41712547
 #          floating-ip-assignment-timeout: 300002
