--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: Ubuntu-22.04
+    runs-on: Ubuntu-20.04
     steps:
       - uses: TimDaub/hetzner-cloud-deploy-server-action@v2
         with:
@@ -16,5 +16,4 @@ jobs:
           server-type: "cax11"
           ssh-key-name: default
           hcloud-token: HnpUy2b6WqdQJfftl3uQFRj1Uxtgk16hmCqOEsnEvFMs8yvNPXVa6vDg4xAGzmR4
-#          floating-ip-id: 41712547
-#          floating-ip-assignment-timeout: 300002
+          floating-ip-id: "41712547"
