--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,19 +1,33 @@
-name: 'Build and deploy docker image'
+name: ci
 
 on:
   push:
     branches:
-      - main
+      - 'main'
 
 jobs:
-  build:
-    runs-on: Ubuntu-20.04
+  docker:
+    runs-on: ubuntu-latest
     steps:
-      - uses: TimDaub/hetzner-cloud-deploy-server-action@v2
+      -
+        name: Checkout
+        uses: actions/checkout@v3
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
-          server-name: "docker-ce"
-          server-image: "docker-ce"
-          server-type: "cax11"
-          ssh-key-name: "default"
-          hcloud-token: "HnpUy2b6WqdQJfftl3uQFRj1Uxtgk16hmCqOEsnEvFMs8yvNPXVa6vDg4xAGzmR4"
-          floating-ip-id: "41712547"
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: user/app:latest
