--- a/.docker/dev/nginx.conf.template
+++ b/.docker/dev/nginx.conf.template
@@ -1,7 +1,10 @@
 server {
 
-    listen 80;
-    server_name test-deploy.com;
+    listen 433 ssl;
+    server_name  test-deploy.com;
+    ssl_certificate /etc/nginx/certs/${SSL_CERT_FILENAME};
+    ssl_certificate_key /etc/nginx/certs/${SSL_KEY_FILENAME};
+
 
     location / {
         proxy_pass http://app:8000/;
